# cellviz

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/backend/: board.h  cellviz.h
src/visualiser/: main.cpp
